[gd_scene format=3 uid="uid://qsucvqbm851h"]

[ext_resource type="Script" uid="uid://uqnfvj0oun5i" path="res://Scripts/room_garden.gd" id="1_ibld7"]
[ext_resource type="Texture2D" uid="uid://dcname8bhyts3" path="res://Assets/Backgrounds/GardenFinal.png" id="2_ibld7"]
[ext_resource type="Texture2D" uid="uid://msevtm017pbs" path="res://Assets/InScene Items/Garden - Roof.png" id="3_81me3"]
[ext_resource type="PackedScene" uid="uid://cbuw6o5y7vsaw" path="res://Scenes/AssetScenes/dynamicInteractableObject.tscn" id="4_0okdk"]
[ext_resource type="Texture2D" uid="uid://nbamektqc7kx" path="res://Assets/InScene Items/Garden - Bucket.png" id="4_3to63"]
[ext_resource type="Texture2D" uid="uid://cvpfrc7fxvfe1" path="res://Assets/InScene Items/Garden - Middle Middle Bushes.png" id="5_0okdk"]
[ext_resource type="Texture2D" uid="uid://da10ln03iakwf" path="res://Assets/InScene Items/Garden - Front Middle Bushes.png" id="5_4rrfk"]
[ext_resource type="Texture2D" uid="uid://cybwefmac8wne" path="res://Assets/InScene Items/Garden - Back Bush.png" id="6_05a4e"]
[ext_resource type="Texture2D" uid="uid://2bg3leqxihf7" path="res://Assets/InScene Items/Garden - FrontBush.png" id="7_jlv4c"]
[ext_resource type="Texture2D" uid="uid://pdgnpvgkimvf" path="res://Assets/InScene Items/Garden - Top Middle Bushes.png" id="7_x1j58"]
[ext_resource type="Texture2D" uid="uid://bu8iev2eop3ba" path="res://Assets/InScene Items/Garden - Bin.png" id="11_7isbp"]
[ext_resource type="PackedScene" uid="uid://dmkvvkru1sug5" path="res://Scenes/AssetScenes/Door_Default.tscn" id="12_05a4e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05a4e"]
size = Vector2(468, 437)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jlv4c"]
size = Vector2(215, 232)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yosul"]
size = Vector2(2121, 263)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2g7v"]
size = Vector2(2090, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rrfk"]
size = Vector2(1407, 290)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0okdk"]
size = Vector2(1387, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sriqb"]
size = Vector2(1081, 320)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3to63"]
size = Vector2(1063, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7isbp"]
size = Vector2(208, 212)

[node name="RoomGarden" type="Node2D" unique_id=940703355]
script = ExtResource("1_ibld7")

[node name="Background" type="TextureRect" parent="." unique_id=1710820961]
offset_left = 2.0
offset_top = -207.0
offset_right = 2686.0
offset_bottom = 1080.0
size_flags_horizontal = 3
texture = ExtResource("2_ibld7")

[node name="RoomItems" type="Node2D" parent="." unique_id=1092708632]

[node name="GardenRoof" type="Sprite2D" parent="RoomItems" unique_id=595141184]
z_index = 1
position = Vector2(1344, 1024)
texture = ExtResource("3_81me3")

[node name="BackBush" parent="RoomItems" unique_id=346532964 instance=ExtResource("4_0okdk")]
position = Vector2(100, 190)

[node name="ObjectInteract" parent="RoomItems/BackBush" index="0" unique_id=1854910098]
position = Vector2(0, 0)
shape = SubResource("RectangleShape2D_05a4e")

[node name="Sprite2D" parent="RoomItems/BackBush" index="1" unique_id=1783952993]
texture = ExtResource("6_05a4e")

[node name="StaticBody2D" parent="RoomItems/BackBush" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="RoomItems/BackBush/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(-35.5, 378)
shape = SubResource("RectangleShape2D_jlv4c")

[node name="GardenFrontBush" type="Sprite2D" parent="RoomItems/BackBush" unique_id=1161849128]
position = Vector2(-1, 308)
texture = ExtResource("7_jlv4c")

[node name="GardenBin" type="Sprite2D" parent="RoomItems" unique_id=1043585219]
position = Vector2(113, 803)
texture = ExtResource("11_7isbp")

[node name="GardenBucket" type="Sprite2D" parent="RoomItems" unique_id=1863844548]
position = Vector2(216, 890)
texture = ExtResource("4_3to63")

[node name="Collisions" type="Node2D" parent="." unique_id=547089238]
position = Vector2(1542, 804)

[node name="RoomBoundary" type="StaticBody2D" parent="." unique_id=1165903164]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RoomBoundary" unique_id=1423180495]
build_mode = 1
polygon = PackedVector2Array(8, 26, 22, 1058, 2674, 1061, 2680, -196, 368, -201)

[node name="fallbackMarker" type="Marker2D" parent="." unique_id=1647380448 groups=["fallback"]]
position = Vector2(1346, 540)
rotation = -1.3089969

[node name="DynamicObjects" type="Node2D" parent="." unique_id=1821744001]

[node name="FrontBush" parent="DynamicObjects" unique_id=1715425344 instance=ExtResource("4_0okdk")]
position = Vector2(630, 814)

[node name="ObjectInteract" parent="DynamicObjects/FrontBush" index="0" unique_id=1854910098]
position = Vector2(996.5, 33.5)
shape = SubResource("RectangleShape2D_yosul")

[node name="Sprite2D" parent="DynamicObjects/FrontBush" index="1" unique_id=1783952993]
position = Vector2(990, 30)
texture = ExtResource("5_4rrfk")

[node name="StaticBody2D" parent="DynamicObjects/FrontBush" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicObjects/FrontBush/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(1005, 127)
shape = SubResource("RectangleShape2D_y2g7v")

[node name="MiddleBush" parent="DynamicObjects" unique_id=1655242670 instance=ExtResource("4_0okdk")]
position = Vector2(559, 472)
interactable = false

[node name="ObjectInteract" parent="DynamicObjects/MiddleBush" index="0" unique_id=1854910098]
position = Vector2(698.5, 20)
shape = SubResource("RectangleShape2D_4rrfk")

[node name="Sprite2D" parent="DynamicObjects/MiddleBush" index="1" unique_id=1783952993]
position = Vector2(707, 30)
texture = ExtResource("5_0okdk")

[node name="StaticBody2D" parent="DynamicObjects/MiddleBush" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicObjects/MiddleBush/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(682, 47)
shape = SubResource("RectangleShape2D_0okdk")

[node name="TopBush" parent="DynamicObjects" unique_id=1533422402 instance=ExtResource("4_0okdk")]
position = Vector2(1153, 151)

[node name="ObjectInteract" parent="DynamicObjects/TopBush" index="0" unique_id=1854910098]
position = Vector2(-2.5, -5)
shape = SubResource("RectangleShape2D_sriqb")

[node name="Sprite2D" parent="DynamicObjects/TopBush" index="1" unique_id=1783952993]
texture = ExtResource("7_x1j58")

[node name="StaticBody2D" parent="DynamicObjects/TopBush" index="2" unique_id=1731382922]
visible = true

[node name="Collision" parent="DynamicObjects/TopBush/StaticBody2D" index="0" unique_id=2126398544]
visible = true
position = Vector2(1, 42)
shape = SubResource("RectangleShape2D_3to63")

[node name="Interactions" type="Node2D" parent="." unique_id=260219603]

[node name="CameraThings" type="Node2D" parent="." unique_id=1586467062]

[node name="Camera2D" type="Camera2D" parent="CameraThings" unique_id=1403974440]
position = Vector2(966, 532)

[node name="CameraMarkerUpper" type="Marker2D" parent="CameraThings" unique_id=1554168654]
position = Vector2(960, 335)

[node name="CameraMarkerLower" type="Marker2D" parent="CameraThings" unique_id=897532307]
position = Vector2(957, 543)

[node name="CameraMarkerRight" type="Marker2D" parent="CameraThings" unique_id=24694359]
position = Vector2(1719, 321)

[node name="Door_Area" parent="." unique_id=974499172 instance=ExtResource("12_05a4e")]
position = Vector2(403, 1021)
currentRoom = 7
roomDestination = 3

[node name="Door_Collision" parent="Door_Area" index="0" unique_id=2029805447]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_7isbp")

[node name="Door_Marker" parent="Door_Area" index="1" unique_id=126591328]
position = Vector2(-111, -228)

[editable path="RoomItems/BackBush"]
[editable path="DynamicObjects/FrontBush"]
[editable path="DynamicObjects/MiddleBush"]
[editable path="DynamicObjects/TopBush"]
[editable path="Door_Area"]
